--- a/Launcher/Launcher/Views/LauncherView.xaml
+++ b/Launcher/Launcher/Views/LauncherView.xaml
@@ -70,7 +70,7 @@
             </TextBox>
         </Grid>
         <ListBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="7" Grid.RowSpan="7" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalAlignment="Stretch" Margin="0,0,0,0" >
-            <ListBoxItem Style="{StaticResource MainWindowListBoxTemplate}"/>
+            <ListBoxItem Style="{StaticResource MainWindowListBoxTemplate}" Content="модуль 1"/>
             <ListBoxItem Style="{StaticResource MainWindowListBoxTemplate}" Content="Модуль 2"/>
             <ListBoxItem Style="{StaticResource MainWindowListBoxTemplate}" Content="Модуль 3"/>
             <ListBoxItem Style="{StaticResource MainWindowListBoxTemplate}" Content="Модуль 4"/>
