--- a/Launcher/Launcher/Views/LauncherView.xaml
+++ b/Launcher/Launcher/Views/LauncherView.xaml
@@ -74,11 +74,19 @@
                      cal:Message.Attach="[Event GotFocus] = [Action Search($view)]; [Event TextChanged] = [Action Search(TextBoxSearch.Text)]">
             </TextBox>-->
         </Grid>
-        <ListBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="7" Grid.RowSpan="7" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalAlignment="Stretch" Margin="0,0,0,0" >
-            <ListBoxItem Style="{StaticResource MainWindowListBoxTemplate}"/>
+        <ListBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="7" Grid.RowSpan="7" ScrollViewer.HorizontalScrollBarVisibility="Disabled" HorizontalAlignment="Stretch" Margin="0,0,0,0" 
+                 ItemContainerStyle="{StaticResource MainWindowListBoxTemplate}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        
+                    </StackPanel>
+                </DataTemplate>
+           </ListBox.ItemTemplate>
+                <!--<ListBoxItem Style="{StaticResource MainWindowListBoxTemplate}"/>
             <ListBoxItem Style="{StaticResource MainWindowListBoxTemplate}" Content="Модуль 2"/>
             <ListBoxItem Style="{StaticResource MainWindowListBoxTemplate}" Content="Модуль 3"/>
-            <ListBoxItem Style="{StaticResource MainWindowListBoxTemplate}" Content="Модуль 4"/>
+            <ListBoxItem Style="{StaticResource MainWindowListBoxTemplate}" Content="Модуль 4"/>-->
         </ListBox>
 
         <!--<ListBox x:Name="CurrentModuleState" Grid.Row="1" Grid.RowSpan="7" Grid.Column="0"
