--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -38,7 +38,7 @@
         <!--Сюда в старом образе у нас отображались данные -->
         <Grid Grid.Row="1" Grid.Column="1">
             <!-- TODO в IoC засунуть-->
-            <moonPdfLib:MoonPdfPanel  x:Name="PdfPanel" RenderTransform="{StaticResource InitialMatrixTransform}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
+            <moonPdfLib:MoonPdfPanel  x:Name="PdfPanel" RenderTransform="{StaticResource InitialMatrixTransform}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" IsManipulationEnabled="true"/>
         </Grid>
     </Grid>
 </Window>
