--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -247,6 +247,7 @@
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
@@ -269,30 +270,13 @@
                                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                                     </ItemsPanelTemplate>
                                 </ListBox.ItemsPanel>
+                                
+                                
+                                <!-- Надо их динамически генерить как-то -->
                                 <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
                                     <ContentPresenter />
                                 </ListBoxItem>
-                                <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                                    <ContentPresenter />
-                                </ListBoxItem>
-                                <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                                    <ContentPresenter />
-                                </ListBoxItem>
-                                <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                                    <ContentPresenter />
-                                </ListBoxItem>
-                                <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                                    <ContentPresenter />
-                                </ListBoxItem>
-                                <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                                    <ContentPresenter />
-                                </ListBoxItem>
-                                <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                                    <ContentPresenter />
-                                </ListBoxItem>
-                                <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
-                                    <ContentPresenter/>
-                                </ListBoxItem>
+ 
                             </ListBox>
                         </Border>
                     </Grid>
