--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -253,12 +253,12 @@
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
                     <Grid Margin="0,5,5,0" Width="auto" Height="auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#FF167423">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="118"/>
+                            <ColumnDefinition Width="300"/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <Border BorderBrush="#FF169516" Grid.Column="0" Grid.Row="0" Grid.RowSpan="1" BorderThickness="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" 
-                                Height="120" Margin="2,6.7,3,2"  Width="Auto">
-                            <Button x:Name="FirstContentButton" FontSize="20" BorderBrush="#FF167423" Background="#FF167423" Foreground="#FFF7F3F3" Margin="0,0,0,0">
+                                Height="120" Margin="2,6.7,3,2"  Width="auto">
+                            <Button x:Name="FirstContentButton" FontSize="12" BorderBrush="#FF167423" Background="#FF167423" Foreground="#FFF7F3F3" Margin="0,0,0,0">
                                 <WrapPanel Width="auto" Height="auto" >
                                     <ContentPresenter/>
                                 </WrapPanel>
@@ -274,7 +274,11 @@
                                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                                     </ItemsPanelTemplate>
                                 </ListBox.ItemsPanel>
-
+                                <ListBox.ItemTemplate>
+                                    <DataTemplate>
+                                        
+                                    </DataTemplate>
+                                </ListBox.ItemTemplate>
                                 
                                 
                                 <!-- Надо их динамически генерить как-то -->
