--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -276,7 +276,7 @@
                                 </ListBox.ItemsPanel>
                                 <ListBox.ItemTemplate>
                                     <DataTemplate>
-                                        
+                                        <TextB></TextB>
                                     </DataTemplate>
                                 </ListBox.ItemTemplate>
                                 
@@ -295,28 +295,18 @@
     </Style>
     
     
-    <Style x:Key="SecondListBox" TargetType="ListBox">
+    <!--<Style x:Key="SecondListBox" TargetType="ListBox">
         <Setter Property="ScrollViewer.PanningMode" Value="HorizontalOnly" />
-        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden"/>
-        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
-        <Setter Property="Margin" Value="0,0,0,0"/>
-        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
-        <Setter Property="Background" Value="{DynamicResource AccentColorBrush}"/>
         <Setter Property="Template">
             <Setter.Value>
-        <ListBox x:Name="MainListBoxInWindowShell">
+        <ListBox x:Name="MainListBoxInWindowShell" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Background="{DynamicResource AccentColorBrush}">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                 </ItemsPanelTemplate>
-                     
             </ListBox.ItemsPanel>
-                    <ListBox.ItemTemplate>
-                        <DataTemplate Template="{DynamicResource TwoLevel}"/>
-                    </ListBox.ItemTemplate>
-            <!-- Сюда будут добавляться Item'ы -->
-            <ListBoxItem  FontFamily="22" Foreground="White" >
+            --><!-- Сюда будут добавляться Item'ы --><!--
+            <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
                 <ContentPresenter />
             </ListBoxItem>
             <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
@@ -343,7 +333,7 @@
         </ListBox>
             </Setter.Value>
         </Setter>
-    </Style>
+    </Style>-->
 
     <!-- ХЗ что снизу серьёзно ..-->
 
