--- a/Launcher/Launcher/Views/LauncherView.xaml
+++ b/Launcher/Launcher/Views/LauncherView.xaml
@@ -70,8 +70,26 @@
             </TextBox>
         </Grid>
         <ListBox x:Name="ListBoxModules" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="7" Grid.RowSpan="7" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                 HorizontalAlignment="Stretch" Margin="0,0,0,0" ItemContainerStyle="{StaticResource MainWindowListBoxTemplate}">
-        
+                 HorizontalAlignment="Stretch" Margin="0,0,0,0" ItemContainerStyle="{StaticResource MainWindowListBoxTemplate}" >
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel cal:Message.Attach="[Event MouseDown] = [Action OpenModule]">
+                        <TextBlock Text="{Binding Name}" />
+                        
+                        <!--<ListBox x:Name="Category">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal" >
+                                        <TextBlock Text="{Binding Description}"></TextBlock>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>-->
+                    </StackPanel>
+                    
+
+                </DataTemplate>
+            </ListBox.ItemTemplate>
         </ListBox>
 
         <!--<ListBox x:Name="CurrentModuleState" Grid.Row="1" Grid.RowSpan="7" Grid.Column="0"
