--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -247,7 +247,6 @@
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="5"/>
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
-        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
@@ -295,10 +294,11 @@
     </Style>
     
     
-    <!--<Style x:Key="SecondListBox" TargetType="ListBox">
+    <Style x:Key="SecondListBox" TargetType="{x:Type ListBox}">
         <Setter Property="ScrollViewer.PanningMode" Value="HorizontalOnly" />
         <Setter Property="Template">
             <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ListBox}">
         <ListBox x:Name="MainListBoxInWindowShell" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Background="{DynamicResource AccentColorBrush}">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -306,7 +306,7 @@
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
              
-            --><!-- Сюда будут добавляться Item'ы --><!--
+             Сюда будут добавляться Item'ы 
             <ListBoxItem  FontFamily="22" Foreground="White" >
                 <ContentPresenter />
             </ListBoxItem>
@@ -332,9 +332,10 @@
                 <ContentPresenter/>
             </ListBoxItem>
         </ListBox>
+                </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>-->
+    </Style>
 
     <!-- ХЗ что снизу серьёзно ..-->
 
