--- a/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
@@ -1,16 +1,34 @@
-﻿<UserControl x:Class="Launcher.Module.Document.Views.MainDocView"
+﻿<Window x:Class="Launcher.Module.Document.Views.MainDocView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:cal="http://www.caliburnproject.org"
-             mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="600">
+             mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="600" WindowState="Maximized" WindowStyle="None" ResizeMode="NoResize">
     <Grid Background="{DynamicResource AccentColorBrush}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="130"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="67"></ColumnDefinition>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <ListBox Background="{DynamicResource AccentColorBrush}" x:Name="CategoryList" ItemContainerStyle="{StaticResource ListBoxItemCategory}" 
+        <Grid.RowDefinitions>
+            <RowDefinition Height="55"></RowDefinition>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <!-- Название модуля в котором мы находимся сюда выводится будет тип -->
+        <TextBlock x:Name="NameOfModuleTextBlock"  Grid.Column="1" Grid.Row="0" Background="DarkGray" Foreground="White" FontSize="22"/>
+        <!-- Стрелка на возворат.-->
+        <StackPanel Grid.Column="0" Grid.Row="0" cal:Message.Attach="[Event MouseDown] = [Action CloseWindow()]">
+            <Canvas>
+                <ContentControl Content="{StaticResource appbar_chevron_left}" Canvas.Top="0" Canvas.Left="0"/>
+            </Canvas>
+        </StackPanel>
+        <!-- ContentGrid -->
+        <Grid  Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+            
+        </Grid>
+
+
+        <!--<ListBox Background="{DynamicResource AccentColorBrush}" x:Name="CategoryList" ItemContainerStyle="{StaticResource ListBoxItemCategory}" 
                  cal:Message.Attach="[Event SelectionChanged] = [Action Show]" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -18,6 +36,6 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <ContentControl Grid.Column="1" x:Name="ActiveItem"></ContentControl>
+        <ContentControl Grid.Column="1" x:Name="ActiveItem"></ContentControl>-->
     </Grid>
-</UserControl>
+</Window>
