--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -256,15 +256,11 @@
                             <ColumnDefinition Width="300"/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
-                        <Border BorderBrush="#FF169516" Grid.Column="0" Grid.Row="0" Grid.RowSpan="1" BorderThickness="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" 
-                                Height="120" Margin="2,6.7,3,2"  Width="auto">
-                            <Button x:Name="FirstContentButton" FontSize="12" BorderBrush="#FF167423" Background="#FF167423" Foreground="#FFF7F3F3" Margin="0,0,0,0">
-                                <WrapPanel Width="auto" Height="auto" >
-                                    <ContentPresenter Content="{Binding Name}"/>
-                                </WrapPanel>
-                            </Button>
+                        <Border BorderBrush="#FF169516" Grid.Column="0" Grid.Row="0" BorderThickness="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" 
+                                Height="120" Margin="2,6.7,3,2">
+                            <ContentPresenter/>
                         </Border>
-                        <Border BorderBrush="#FF167423" BorderThickness="0,0,0,2" Background="WhiteSmoke" Grid.Column="1" HorizontalAlignment="Stretch" Height="124.7" Margin="2,0,0,0" 
+                        <!--<Border BorderBrush="#FF167423" BorderThickness="0,0,0,2" Background="WhiteSmoke" Grid.Column="1" HorizontalAlignment="Stretch" Height="124.7" Margin="2,0,0,0" 
                                 VerticalAlignment="Top" Width="auto" Grid.ColumnSpan="1">
                             <ListBox x:Name="Category"  ScrollViewer.PanningMode="HorizontalOnly" ScrollViewer.VerticalScrollBarVisibility="Hidden" 
                                      ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" 
@@ -278,7 +274,7 @@
                                     <DataTemplate>
                                         <ContentPresenter/>
                                     </DataTemplate>
-                                </ListBox.ItemTemplate>
+                                </ListBox.ItemTemplate>-->
                                 
                                 
                                 <!-- Надо их динамически генерить как-то -->
@@ -286,8 +282,8 @@
                                     <ContentPresenter />
                                 </ListBoxItem>-->
  
-                            </ListBox>
-                        </Border>
+                            <!--</ListBox>
+                        </Border>-->
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
@@ -415,12 +411,7 @@
                             <RowDefinition></RowDefinition>
                             <RowDefinition></RowDefinition>
                         </Grid.RowDefinitions>
-                        <Button Grid.ColumnSpan="2" Grid.RowSpan="3"  Width="170" Height="Auto" Margin="5,0,0,5" FontSize="22" Background="#FF167423" Foreground="White" 
-<<<<<<< HEAD
-                               >
-=======
-                                Content="{Binding AboutName}">
->>>>>>> 033827587099f594558257c2d293c44a0d9d6e1b
+                        <Button Grid.ColumnSpan="2" Grid.RowSpan="3"  Width="170" Height="Auto" Margin="5,0,0,5" FontSize="22" Background="#FF167423" Foreground="White">
                             <!--<Button.Style>
                     <Style>
                         <Style.Triggers>
