--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -253,12 +253,18 @@
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
                     <Grid Margin="0,5,5,0" Width="auto" Height="auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#FF167423">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="300"/>
+                            <ColumnDefinition Width="130"/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <Border BorderBrush="#FF169516" Grid.Column="0" Grid.Row="0" BorderThickness="2" HorizontalAlignment="Stretch" VerticalAlignment="Top" 
                                 Height="120" Margin="2,6.7,3,2">
-                            <ContentPresenter/>
+                            <ContentPresenter>
+                                <ContentPresenter.Resources>
+                                    <Style TargetType="{x:Type TextBlock}">
+                                        <Setter Property="TextWrapping" Value="Wrap"/>
+                                    </Style>
+                                </ContentPresenter.Resources>
+                            </ContentPresenter>
                         </Border>
                         <!--<Border BorderBrush="#FF167423" BorderThickness="0,0,0,2" Background="WhiteSmoke" Grid.Column="1" HorizontalAlignment="Stretch" Height="124.7" Margin="2,0,0,0" 
                                 VerticalAlignment="Top" Width="auto" Grid.ColumnSpan="1">
