--- a/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Launcher.Module.Document.Views.MainDocView"
+﻿<UserControl x:Class="Launcher.Module.Document.Views.MainDocView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:cal="http://www.caliburnproject.org"
-             mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="600" WindowState="Maximized" WindowStyle="None" ResizeMode="NoResize">
+             mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="600">
     <Grid Background="{DynamicResource AccentColorBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="67"></ColumnDefinition>
@@ -38,4 +38,4 @@
         </ListBox>
         <ContentControl Grid.Column="1" x:Name="ActiveItem"></ContentControl>-->
     </Grid>
-</Window>
+</UserControl>
