--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -48,7 +48,13 @@
                                                 </Style.Triggers>
                                             </Style>
                                         </Grid.Style>
-                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" >
+                                            <ContentPresenter.Resources>
+                                                <Style TargetType="{x:Type TextBlock}">
+                                                    <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
+                                                </Style>
+                                            </ContentPresenter.Resources>
+                                            </ContentPresenter>
                                     </Grid>
                                 </Border>
                             </Border>
@@ -137,6 +143,8 @@
         <Setter Property="Background" Value="DarkGreen" />
         <Setter Property="Height" Value="60" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
@@ -153,7 +161,11 @@
                                 </Style>
                             </StackPanel.Style>
                             <ContentPresenter>
-
+                                <ContentPresenter.Resources>
+                                    <Style TargetType="{x:Type TextBlock}">
+                                        <Setter Property="TextWrapping" Value="Wrap"/>
+                                    </Style>
+                                </ContentPresenter.Resources>
                             </ContentPresenter>
                         </StackPanel>
                     </Border>
@@ -200,7 +212,7 @@
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
                     <WrapPanel>
                         <WrapPanel.Style>
-                            <Style TargetType="StackPanel">
+                            <Style TargetType="WrapPanel">
                                 <Style.Triggers>
                                     <Trigger Property="StackPanel.IsMouseOver" Value="True">
                                         <Setter Property="Background" Value="DarkGreen" />
